bad/assign_var_int_array.example_compiler_output
ERROR
[1mbad/assign_var_int_array.lat:5:4: [1;31merror: [0;1massigning to `int` from incompatible type `int[]`[m
	x = new int[3];
	  [1;32m^[m
